提交 0.0.0.6 版本新增文件

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,49 +1,57 @@
+0.0.0.6（2023-10-27）
+--------------------------------------------------------------------------------------------------------------------------------------------
+
+新增功能
+1. README.md 更新了本地构建 Docker 镜像说明；
+2. pom 文件中与 Docker 打包相关的配置信息解封并经过本地化验证；
+
+
 0.0.0.5（2023-10-24）
 --------------------------------------------------------------------------------------------------------------------------------------------
 
-#### 缺陷修复
-* 修复了后端分页无法进行 order by 排序缺陷；
-* 修复了 Jackson 序列化日期类型字段无法正常展示问题；
+缺陷修复
+1. 修复了后端分页无法进行 order by 排序缺陷；
+2. 修复了 Jackson 序列化日期类型字段无法正常展示问题；
 
-#### 新增功能
-* 代码从 Gitlab 私库迁出并经过代码走查后重新迁入到 Gitee 代码库；
-* 重新调整了代码结构，删除了 vtx_redis 组件正式将 redis 纳入到标配；
-* 重构了分页代码，并使其与条件查询代码兼容；
-* 优化了 Yaml 配置获取机制；
-* 增加了 VtxSlimopt 实体作为 vtx_slimopt 组件的试验代码；
-* 将 vertx-core 版本从原来 3.9.8 升级到 4.4.5，jdk 从原来的 jdk8 升级到 jdk17；
-* 删除了不必要的依赖；
+新增功能
+1. 代码从 Gitlab 私库迁出并经过代码走查后重新迁入到 Gitee 代码库；
+2. 重新调整了代码结构，删除了 vtx_redis 组件正式将 redis 纳入到标配；
+3. 重构了分页代码，并使其与条件查询代码兼容；
+4. 优化了 Yaml 配置获取机制；
+5. 增加了 VtxSlimopt 实体作为 vtx_slimopt 组件的试验代码；
+6. 将 vertx-core 版本从原来 3.9.8 升级到 4.4.5，jdk 从原来的 jdk8 升级到 jdk17；
+7. 删除了不必要的依赖；
 
 0.0.0.4（2023-08-26）
 --------------------------------------------------------------------------------------------------------------------------------------------
 
-#### 缺陷修复
-* 将原分页操作从前端分页改为了后端分页；
+缺陷修复
+1. 将原分页操作从前端分页改为了后端分页；
 
-#### 新增功能
-* 增加了 mysql 与 postgresql 两种数据库模式并经过全面验证；
+新增功能
+1. 增加了 mysql 与 postgresql 两种数据库模式并经过全面验证；
 
 0.0.0.3（2023-06-02）
 --------------------------------------------------------------------------------------------------------------------------------------------
 
-#### 缺陷修复
-* 修复 vtx_slimopt 并发性能问题，通过预设 SQL 别名避免了字段动态映射寻址转换；
+缺陷修复
+1. 修复 vtx_slimopt 并发性能问题，通过预设 SQL 别名避免了字段动态映射寻址转换；
 
-#### 新增功能
-* 在 pom 文件中为 docker 启动脚本中增加了 dump 文件输出地址，并挂载到 /tmp 目录方便获取
+新增功能
+1. 在 pom 文件中为 docker 启动脚本中增加了 dump 文件输出地址，并挂载到 /tmp 目录方便获取
 
 0.0.0.2（2023-04-12）
 --------------------------------------------------------------------------------------------------------------------------------------------
 
-#### 缺陷修复
-* 修复了打包后通过ConfigRetriever获取不了包内配置问题；
+缺陷修复
+1. 修复了打包后通过ConfigRetriever获取不了包内配置问题；
 
-#### 新增功能
-* 将代码结构中不必要的内容删除；
-* 可直接通过 mvn clean package 命令本地构建 Docker 镜像并上传到目标私库；
+新增功能
+1. 将代码结构中不必要的内容删除；
+2. 可直接通过 mvn clean package 命令本地构建 Docker 镜像并上传到目标私库；
 
 0.0.0.1（2023-03-14）
 --------------------------------------------------------------------------------------------------------------------------------------------
 
-#### 新增功能
-* 初始化项目导入；
+新增功能
+1. 初始化项目导入；
