修复了已知漏洞并更新为 0.0.0.7 版本

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,19 @@
+0.0.0.7（2023-11-13）
+--------------------------------------------------------------------------------------------------------------------------------------------
+
+新增功能
+1. 新增 zipkin 链路追踪功能；
+
+缺陷修复
+1. 修复 Yaml 配置读取时异步回调导致部分配置无法正常获取的问题；
+2. 全面验证整合 zookeeper 的分布式集群功能并修复了 zookeeper 版本过低的漏洞问题；
+
 0.0.0.6（2023-10-27）
 --------------------------------------------------------------------------------------------------------------------------------------------
 
 新增功能
 1. README.md 更新了本地构建 Docker 镜像说明；
 2. pom 文件中与 Docker 打包相关的配置信息解封并经过本地化验证；
-
 
 0.0.0.5（2023-10-24）
 --------------------------------------------------------------------------------------------------------------------------------------------
