添加完整的 JUnit5 的单元测试代码

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.0.0.8（2023-12-7）
+--------------------------------------------------------------------------------------------------------------------------------------------
+
+新增功能
+1. 新增 vtx_slimopt 组件的可重复执行单元测试用例；
+
 0.0.0.7（2023-11-13）
 --------------------------------------------------------------------------------------------------------------------------------------------
 
